crates/swc/tests/tsc-references/subtypingWithCallSignaturesA.2.minified.js
//// [subtypingWithCallSignaturesA.ts]
foo3(function(x) {
    return "";
}); // error
